--- a/Week07/homework/Week 7 TH.ipynb
+++ b/Week07/homework/Week 7 TH.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import sys\n",
@@ -31,7 +31,7 @@
     "    if choice == 'Y':\n",
     "        os.remove('results.body')\n",
     "    elif choice == 'N':\n",
-    "        print('Continuing with existing results file present. WARNING: New resutls will be appended onto old results file.')\n",
+    "        print('Continuing with existing results file present. WARNING: New results will be appended onto old results file.')\n",
     "    else:\n",
     "        print('Not a valid option. Goodbye')\n",
     "        sys.exit()\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -84,15 +84,15 @@
       "\u001B[36mINFO\u001B[0m[0000] Scanning running processes...                \n",
       "\u001B[33mWARN\u001B[0m[0004] DETECTION! Malicious process detected as foundGoBinary  \u001B[33mpid\u001B[0m=3138 \u001B[33mprocess\u001B[0m=ls\n",
       "\u001B[33mWARN\u001B[0m[0005] DETECTION! Malicious process detected as foundGoBinary  \u001B[33mpid\u001B[0m=25680 \u001B[33mprocess\u001B[0m=snapd\n",
-      "\u001B[36mINFO\u001B[0m[0018] Scanning autoruns...                         \n",
-      "\u001B[33mWARN\u001B[0m[0019] DETECTION! Malicious autorun detected as foundGoBinary  \u001B[33mimage_path\u001B[0m=/usr/bin/snap \u001B[33mtype\u001B[0m=systemd\n",
-      "\u001B[33mWARN\u001B[0m[0019] DETECTION! Malicious autorun detected as foundGoBinary  \u001B[33mimage_path\u001B[0m=/usr/bin/snap \u001B[33mtype\u001B[0m=systemd\n",
-      "\u001B[36mINFO\u001B[0m[0020] Scanning the filesystem (this can take several minutes)... \n",
-      "\u001B[31mERRO\u001B[0m[0020] Some malicious artifacts have been detected on this system: \n",
-      "\u001B[31mERRO\u001B[0m[0020] Found detection for foundGoBinary            \n",
-      "\u001B[31mERRO\u001B[0m[0020] Found detection for foundGoBinary            \n",
-      "\u001B[31mERRO\u001B[0m[0020] Found detection for foundGoBinary            \n",
-      "\u001B[31mERRO\u001B[0m[0020] Found detection for foundGoBinary            \n",
+      "\u001B[36mINFO\u001B[0m[0014] Scanning autoruns...                         \n",
+      "\u001B[33mWARN\u001B[0m[0015] DETECTION! Malicious autorun detected as foundGoBinary  \u001B[33mimage_path\u001B[0m=/usr/bin/snap \u001B[33mtype\u001B[0m=systemd\n",
+      "\u001B[33mWARN\u001B[0m[0015] DETECTION! Malicious autorun detected as foundGoBinary  \u001B[33mimage_path\u001B[0m=/usr/bin/snap \u001B[33mtype\u001B[0m=systemd\n",
+      "\u001B[36mINFO\u001B[0m[0015] Scanning the filesystem (this can take several minutes)... \n",
+      "\u001B[31mERRO\u001B[0m[0015] Some malicious artifacts have been detected on this system: \n",
+      "\u001B[31mERRO\u001B[0m[0015] Found detection for foundGoBinary            \n",
+      "\u001B[31mERRO\u001B[0m[0015] Found detection for foundGoBinary            \n",
+      "\u001B[31mERRO\u001B[0m[0015] Found detection for foundGoBinary            \n",
+      "\u001B[31mERRO\u001B[0m[0015] Found detection for foundGoBinary            \n",
       "\n",
       "Suspicious PIDs: 3138 \n",
       "Suspicious PIDs: 25680 \n"
@@ -153,12 +153,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "COMMAND  PID     USER   FD      TYPE DEVICE SIZE/OFF   NODE NAME\n",
+      "ls      3138 p.dalton  cwd       DIR    8,1     4096 258130 /home/p.dalton/test-lk\n",
+      "ls      3138 p.dalton  rtd       DIR    8,1     4096      2 /\n",
+      "ls      3138 p.dalton  txt       REG    8,1  6597697 258133 /usr/local/bin/ls\n",
+      "ls      3138 p.dalton  DEL       REG    8,1            3453 /usr/lib/x86_64-linux-gnu/libc-2.31.so\n",
+      "ls      3138 p.dalton  DEL       REG    8,1            3466 /usr/lib/x86_64-linux-gnu/libpthread-2.31.so\n",
+      "ls      3138 p.dalton  DEL       REG    8,1            3449 /usr/lib/x86_64-linux-gnu/ld-2.31.so\n",
+      "ls      3138 p.dalton    0r      CHR    1,3      0t0      6 /dev/null\n",
+      "ls      3138 p.dalton    1w      REG    8,1       85 258135 /home/p.dalton/test-lk/.d.log\n",
+      "ls      3138 p.dalton    2w      REG    8,1       85 258135 /home/p.dalton/test-lk/.d.log\n",
+      "ls      3138 p.dalton    3r      CHR    1,3      0t0      6 /dev/null\n",
+      "ls      3138 p.dalton    4u      REG    8,1        4 258134 /home/p.dalton/test-lk/d.pid\n",
+      "ls      3138 p.dalton    5u     IPv6  33422      0t0    TCP *:http-alt (LISTEN)\n",
+      "ls      3138 p.dalton    7u  a_inode   0,14        0  10376 [eventpoll]\n",
+      "ls      3138 p.dalton    8r     FIFO   0,13      0t0  33424 pipe\n",
+      "ls      3138 p.dalton    9w     FIFO   0,13      0t0  33424 pipe\n",
+      "\n",
       "Found Found!\n"
      ]
     }
@@ -177,6 +194,7 @@
     "    search = 'REG.*'\n",
     "    # Convert the list to a string.\n",
     "    output = ''.join(lines)\n",
+    "    print(output)\n",
     "    cmd_output = re.findall(r'' + search + '', output)\n",
     "    files = []\n",
     "    for output in cmd_output:\n",
@@ -230,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -303,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -354,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
